tests/asm-link/character-escape-at-end/rgbasm.err
error: invalid character escape
   ╭─[ test.asm:1:15 ]
   │
 1 │ println "hello\
   │               ┬  
   │               ╰── no character to escape
───╯
error: unterminated string literal
   ╭─[ test.asm:1:9 ]
   │
 1 │ println "hello\
   │         ───┬───  
   │            ╰───── no closing quote before the end of the line
───╯
2 errors generated.
